	PR c++/22034 	* cgraphunit.c (cgraph_varpool_assemble_pending_decls): Emit debug 	info only for local statics, not for member variables.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@103251 138bc75d-0d04-0410-961f-82ee72b054a4